# vasv-stdin-backend

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  README.md  manage.py  package.json  pyproject.toml  runserver.sh
attendance/: admin.py  apps.py  models.py  pagination.py  serializers.py  urls.py  views.py
attendance/migrations/: 0001_initial.py  0002_alter_attendance_options.py  0003_remove_attendanceblock_link.py
attendance/utilities/: attendance_helper.py  stores.py
backend/: asgi.py  routing.py  scripts.py  settings.py  urls.py
news/: admin.py  apps.py  consumers.py  models.py  pagination.py  serializers.py  urls.py  views.py
news/migrations/: 0001_initial.py
news/utilities/: news_helpers.py  stores.py
semesters/: admin.py  apps.py  models.py  serializers.py  views.py
semesters/migrations/: 0001_initial.py  0002_auto_20210724_1721.py  0003_auto_20210728_1051.py  0004_semester_current_status.py  0005_semesterblock_updated_at.py
semesters/utilities/: stores.py
students/: admin.py  consumers.py  models.py  permissions.py  serializers.py  urls.py  views.py
students/management/commands/: _sequences.py  sync.py
students/migrations/: 0001_initial.py  0002_alter_student_branch.py  0003_remove_student_last_refreshed.py  0004_alter_student_current_status.py
students/utilities/: starters.py  status_codes.py  stores.py
subjects/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
subjects/migrations/: 0001_initial.py
subjects/utilities/: counter.py  result_helper.py  stores.py
syncing/: admin.py  apps.py  models.py  urls.py  views.py
syncing/migrations/: 0001_initial.py  0002_auto_20210816_1206.py  0003_auto_20210816_1257.py
syncing/utilities/: status_codes.py  stores.py
vasv-stdin-backend/: asgi.py  routing.py  settings.py  wsgi.py
